--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,8 @@
-authors = ["Sebastian Pech <sebastian.pech@me.com>"]
 name = "StringArrayEditor"
 uuid = "9ac07dbc-a56c-11e8-2053-773943ca4811"
+authors = ["Sebastian Pech <sebastian.pech@me.com>"]
 version = "0.1.0"
 
 [deps]
+PrePostCall = "75ea050c-ac48-11e8-3ca6-5d0a9bde5671"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
