Add edit function and fix move

--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["Sebastian Pech <sebastian.pech@me.com>"]
 version = "0.1.0"
 
 [deps]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 PrePostCall = "75ea050c-ac48-11e8-3ca6-5d0a9bde5671"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
